@@ -1,3 +1,9 @@
+2006-05-10  Benoît Dejean  <benoit@placenet.org>
+
+	* src/prettytable.c: (new_application), (pretty_table_new):
+
+	Fixed a couple of small leaks.
+
 2006-05-08  Benoît Dejean  <benoit@placenet.org>
 
 	* src/gnome-system-monitor.schemas.in:
